--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
     <properties>
         <java.version>21</java.version>
+        <htmx-spring-boot.version>4.0.1</htmx-spring-boot.version>
         <lombok.version>1.18.36</lombok.version>
         <lombok-mapstruct.version>0.2.0</lombok-mapstruct.version>
         <mapstruct.version>1.6.3</mapstruct.version>
@@ -67,12 +68,12 @@
         <dependency>
             <groupId>io.github.wimdeblauwe</groupId>
             <artifactId>htmx-spring-boot-thymeleaf</artifactId>
-            <version>4.0.0</version>
+            <version>${htmx-spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.wimdeblauwe</groupId>
             <artifactId>htmx-spring-boot</artifactId>
-            <version>4.0.0</version>
+            <version>${htmx-spring-boot.version}</version>
         </dependency>
 
         <dependency>
