--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,16 @@
     <properties>
         <java.version>21</java.version>
         <htmx-spring-boot.version>4.0.1</htmx-spring-boot.version>
+
+        <htmx.version>2.0.3</htmx.version>
+        <htmx-ext-head.version>2.0.2</htmx-ext-head.version>
+        <alpinejs.version>3.14.3</alpinejs.version>
+        <font-awesome.version>6.7.1</font-awesome.version>
+
         <lombok.version>1.18.36</lombok.version>
         <lombok-mapstruct.version>0.2.0</lombok-mapstruct.version>
         <mapstruct.version>1.6.3</mapstruct.version>
+        <jsoup.version>1.18.3</jsoup.version>
     </properties>
 
     <dependencies>
@@ -80,25 +87,25 @@
             <groupId>org.webjars.npm</groupId>
             <artifactId>htmx.org</artifactId>
             <scope>runtime</scope>
-            <version>2.0.3</version>
+            <version>${htmx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>htmx-ext-head-support</artifactId>
             <scope>runtime</scope>
-            <version>2.0.2</version>
+            <version>${htmx-ext-head.version}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>alpinejs</artifactId>
             <scope>runtime</scope>
-            <version>3.14.3</version>
+            <version>${alpinejs.version}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>font-awesome</artifactId>
             <scope>runtime</scope>
-            <version>6.6.0</version>
+            <version>${font-awesome.version}</version>
         </dependency>
 
         <dependency>
@@ -143,7 +150,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.18.2</version>
+            <version>${jsoup.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
