build: update dependency versions
Java 25/Spring Boot 4

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.0</version>
+        <version>4.0.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -31,24 +31,24 @@
     </scm>
 
     <properties>
-        <java.version>21</java.version>
-        <htmx-spring-boot.version>4.0.1</htmx-spring-boot.version>
+        <java.version>25</java.version>
+        <htmx-spring-boot.version>5.0.0</htmx-spring-boot.version>
 
-        <htmx.version>2.0.3</htmx.version>
-        <htmx-ext-head.version>2.0.2</htmx-ext-head.version>
-        <alpinejs.version>3.14.3</alpinejs.version>
-        <font-awesome.version>6.7.1</font-awesome.version>
+        <htmx.version>2.0.8</htmx.version>
+        <htmx-ext-head.version>2.0.5</htmx-ext-head.version>
+        <alpinejs.version>3.15.2</alpinejs.version>
+        <font-awesome.version>7.0.1</font-awesome.version>
 
-        <lombok.version>1.18.36</lombok.version>
+        <lombok.version>1.18.42</lombok.version>
         <lombok-mapstruct.version>0.2.0</lombok-mapstruct.version>
         <mapstruct.version>1.6.3</mapstruct.version>
-        <jsoup.version>1.18.3</jsoup.version>
+        <jsoup.version>1.21.2</jsoup.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-webmvc</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -113,8 +113,8 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-h2console</artifactId>
             <scope>runtime</scope>
         </dependency>
 
@@ -139,12 +139,12 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <artifactId>spring-boot-starter-webmvc-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
